trunk/Archive2/87/9bce4d270ca7c6/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:8:5: error: static_assert failed "Don't call F2!"
    static_assert(std::is_integral<T>::value, "Don't call F2!");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:13:2: note: in instantiation of function template specialization 'F2<float>' requested here
 F2(2); // Remove this call to compile
 ^
1 error generated.
